[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tzconv"
version = "1.3.1"
description = "command-line tool to convert a date and time to several time zones at once"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
tzconv = "tzconv:main"

[project.urls]
Homepage = "https://github.com/gn0/tzconv"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
